<resources>
    <string name="app_name">Terjmni</string>
    <string name="word">word</string>
    <string name="meaningTitle">Meanings</string>
    <string name="part_of_speech">part of speech</string>
    <string name="image_content">image content</string>
    <string name="error">error</string>
    <string name="ha_lo">ha-lo</string>
    <string name="single_meaning">single meaning</string>
    <string name="meaning">as a verb</string>
    <string name="synonyms">Synonyms</string>
    <string name="antonyms">Antonyms</string>
    <string name="antonyms_value">antonyms value</string>
    <string name="synonyms_value">synonyms value</string>
    <string name="definitionTitle">Definitions</string>
    <string name="more">more</string>
</resources>
