<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/singleMeaningCard"
    android:layout_width="170dp"
    android:layout_height="170dp"
    android:layout_margin="4dp"
    android:background="@drawable/meaning_background"
    android:orientation="vertical"
    android:padding="8dp"
    app:cardCornerRadius="@dimen/radius"
    app:cardElevation="@dimen/elevation">

    <TextView
        android:id="@+id/word_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:text="@string/single_meaning"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/word_meaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/meaning"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        android:textStyle="italic" />

    <ImageButton
        android:id="@+id/navigate_to_word_details"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/yellow"
        android:contentDescription="@string/image_content"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:cardCornerRadius="@dimen/radius"
        app:cardElevation="@dimen/elevation"

        />

</LinearLayout>
