<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/grey"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"

            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/back_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/antonyms_string"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/meaning_background"
        android:orientation="vertical"
        android:padding="8dp"
        app:cardCornerRadius="@dimen/radius"
        app:cardElevation="@dimen/elevation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:text="@string/antonyms"
            android:textColor="@color/yellow"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/antonyms_string_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="12dp"
            android:text="@string/antonyms_value"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/synonyms_string"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/meaning_background"
        android:orientation="vertical"
        android:padding="8dp"
        app:cardCornerRadius="@dimen/radius"
        app:cardElevation="@dimen/elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:text="@string/synonyms"
            android:textColor="@color/yellow"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/synonyms_string_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="12dp"
            android:text="@string/synonyms_value"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>

    <TextView
        android:id="@+id/definitionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/definitionTitle"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/synonyms_string" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/definitions_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="240dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/definitionTitle"
        tools:listitem="@layout/single_definition" />

</androidx.constraintlayout.widget.ConstraintLayout>