<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/grey"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />


    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />


    <LinearLayout
        android:id="@+id/searchCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/yellow"
            app:cardCornerRadius="@dimen/radius"
            app:cardElevation="@dimen/elevation">

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:iconifiedByDefault="false"
                android:queryHint="Search words" />
        </androidx.cardview.widget.CardView>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/search_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/search" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/error_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchCard">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/error" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_content"
            android:text="@string/error"
            android:textColor="@color/yellow"
            android:textSize="@dimen/error_text"
            app:layout_constraintTop_toBottomOf="@+id/error" />

        <ImageView
            android:id="@+id/refresh_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/image_content"
            android:src="@drawable/ic_baseline_autorenew_24" />


    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:visibility="visible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchCard">

        <TextView
            android:id="@+id/word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/word"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="28sp"
            android:textStyle="italic"
            app:layout_constraintTop_toTopOf="@+id/content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/word_phonetics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/word" />

        <TextView
            android:id="@+id/meaningTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/meaningTitle"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/word_phonetics" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/meanings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:foregroundGravity="center"
            android:orientation="vertical"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/content"
            app:layout_constraintStart_toStartOf="@+id/content"
            app:layout_constraintTop_toBottomOf="@id/meaningTitle"
            tools:listitem="@layout/single_meaning_card" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>